crates/context-macro/tests/constraints/missing_token_pogram.fail.stderr
error: One constraint requires including the `Program<TokenProgram>` account.
  --> tests/constraints/missing_token_pogram.fail.rs:21:1
   |
21 | pub struct InitContext {
   | ^^^
